--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "hazem/zatca",
+    "name": "hazem7575/zatca",
     "description": "ZATCA (Fatoora) e-invoicing implementation for Saudi Arabia",
     "type": "library",
     "license": "MIT",
