--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "hazem7575/zatca",
+    "name": "hazem/zatca",
     "description": "ZATCA (Fatoora) e-invoicing implementation for Saudi Arabia",
     "type": "library",
     "license": "MIT",
@@ -16,13 +16,6 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "php": "^7.4|^8.0",
-        "ext-openssl": "*",
-        "ext-json": "*",
-        "ext-dom": "*",
-        "ext-curl": "*",
-        "illuminate/support": "^8.0|^9.0|^10.0",
-        "illuminate/database": "^8.0|^9.0|^10.0",
         "salla/zatca": "*"
     }
 }
